Fixed whitespace on resume

--- a/src/styles/resume.styl
+++ b/src/styles/resume.styl
@@ -1,8 +1,9 @@
 .resume
     background-color #1F1F1F
-    height 100%
+    height 100vh
 
     .main
+        height 100%
         width 700px
         background-color #FFFFFF
         padding-left 25px
